# MPVRP-CC

./: .gitignore  Dockerfile  README.md  generate_config.sh  index.html  pyproject.toml  requirements.txt  scoreboard.html  start.sh  submission.html  tools.html  visualisation.html
.github/workflows/: ci.yml  deploy.yml  python-tests.yaml  python-tests.yaml.txt
backup/app/: main.py  schemas.py
backup/app/routes/: auth.py  model.py  scoreboard.py  scoring.py
backup/core/auth/: auth_logic.py
backup/core/model/: feasibility.py
backup/core/scoring/: score_evaluation.py  utils.py
backup/database/: db.py  models.py  models_db.py  notion.py
pages/: scoreboard.html  submission.html  visualisation.html
pages/static/css/: scoreboard.css  submission.css  tools.css
pages/static/js/: auth.js  config.js  config.template.js  scoreboard.js  tools.js  visualisation.js
static/css/: style.css  submission.css  visualisation.css
static/js/: auth.js  config.js  scoreboard.js  visualisation.js
tests/: conftest.py  test_api.py  test_feasibility.py  test_notion.py  test_score_evaluation.py  test_scoring_route.py  test_scoring_utils.py
