[project]
name = "mpvrp-cc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "networkx>=3.6.1",
    "numpy>=2.4.0",
    "pulp>=3.3.0",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.2",
    "python-multipart>=0.0.21",
    "uvicorn[standard]>=0.40.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[tool.coverage.run]
source = ["backup"]
omit = ["tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
